web/htdocs/themes/facelift/scss/_views.scss
/*
+------------------------------------------------------------------+
|             ____ _               _        __  __ _  __           |
|            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
|           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
|           | |___| | | |  __/ (__|   <    | |  | | . \            |
|            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
|                                                                  |
| Copyright Mathias Kettner 2012             mk@mathias-kettner.de |
+------------------------------------------------------------------+

This file is part of Check_MK.
The official homepage is at http://mathias-kettner.de/check_mk.

check_mk is free software;  you can redistribute it and/or modify it
under the  terms of the  GNU General Public License  as published by
the Free Software Foundation in version 2.  check_mk is  distributed
in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
PARTICULAR PURPOSE. See the  GNU General Public License for more de-
ails.  You should have  received  a copy of the  GNU  General Public
License along with GNU Make; see the file  COPYING.  If  not,  write
to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
Boston, MA 02110-1301 USA.
*/

/*-------------------------------------------------------------------------.
|  _____     _            ___      ___        _   _                        |
| |_   _|_ _| |__  ___   ( _ )    / _ \ _ __ | |_(_) ___  _ __  ___        |
|   | |/ _` | '_ \/ __|  / _ \/\ | | | | '_ \| __| |/ _ \| '_ \/ __|       |
|   | | (_| | |_) \__ \ | (_>  < | |_| | |_) | |_| | (_) | | | \__ \       |
|   |_|\__,_|_.__/|___/  \___/\/  \___/| .__/ \__|_|\___/|_| |_|___/       |
|                                      |_|                                 |
+--------------------------------------------------------------------------+
| The navi table contains the tab navigation above the content tables      |
| containing the buttons "filter", "commands", "display" and so on.        |
'-------------------------------------------------------------------------*/

table.filterform {
  padding: 0;
  border-collapse: collapse;
  border-style: none;

  td {
    padding: 0;
  }
}

div.floatfilter {
  float: left;
  width: 310px;
  height: 53px;
  margin: 0 4px 3px 0;
  padding: 4px 4px;
  color: #000;
  background-color: rgba(160, 181, 190, 0.6);
  border-color: #acc #22404d #22414d #8ab;
  border-style: solid;
  border-width: 1px;
  border-radius: 5px;
  box-shadow: 0.5px 0.5px 1px #444;

  &.double {
    display: table-cell;
    height: 110px;

    .content {
      height: 82px;
    }
  }

  input[type=text] {
    width: 294px;

    &.neg {
      width: 229px;
    }
  }

  .legend {
    width: 300px;
    height: 17px;
    padding: 3px 5px 0;
    margin-bottom: 1px;
    font-size: 10px;
    color: #fff;
    background-color: rgba(255, 255, 255, 0.2);
    border-radius: 5px 5px 0 0;
  }

  .content {
    display: table-cell;
    width: 311px;
    height: 30px;
    padding-top: 5px;
    padding-left: 4px;
    margin-top: 0;
    margin-left: 0;
    text-align: left;

    > select {
      width: 300px;

      &.neg,
      &#opthost_group,
      &#optservice_contact_group,
      &#opthost_contact_group,
      &#optservice_group {
        width: 237px;
      }
    }

    .multigroup {
      table {
        margin-top: -6px;
      }

      select {
        width: 156px;
        height: 66px;
      }
    }

    .filtertime select {
      width: 136px;
    }
  }

  &.service_custom_variable, &.host_custom_variable {
    input, select {
      display: inline-block;
      width: 45%;
    }

    select {
      margin-right: 10px;
    }
  }

  table.vs_duallist {
    width: 313px;
    border-spacing: 0px 3px !important;

    a.control {
      padding: 0px 6px;
    }

    /* TODO: Get rid of these important styles */
    select {
      height: 43px !important; /* Is hardcoded to 48px in generated HTML code.
                                  This is bad but we cannot break compatibility
                                  with the classic theme for the while. */
      padding: 0 !important;
      margin-bottom: 0 !important;
    }
  }
}
/* ... */

